
CURRENT VERSION:

	Risk Game:	1.1.1.0
	 * Save:	7
	 * Network:	9

	Android		6
	Flash GUI:	2
	Swing GUI:	2
	Simple GUI:	1.1.1.1
	Increment1GUI:	1.1.1.1
	CommandLine:	1.0.4.1

1.1.1.0

	when you must trade, the "End Trade" button becomes disabled/hidden

	Android 6 DONE - when you are in "MUST TRADE" mode the "Go" button should not say "End Trade" and the cards button should be green
	Android 5 save game works on api < 9
	Android 4 DONE - Go> Button needs to be green and nice
		  DONE - [Cards] button needs to be nice
		  DONE - [Hint] button needs to be nice
	Android 3 FileChooser nullpointer fix
		  save and undo icons added
		  RadioButton hack added to make startgame button more visible
		  DONE - PicturePanel should not use defualt font as it changes with dpi, should be a fixed size
		  fixed - WARNING: trying to set a transparent color: 0
		  fixed - on tablet the segmented control for the map views needs extra padding
	Android 2 MapStore sprite wrong size on ldpi fix
	Android 1 DONE - layout attack dialog fully

1.1.0.9 (26.06.2012) ### released for Android on Google Play for the first time ###

	error now does not trigger a error box to pop up:
	 Could not open/create prefs root node Software\JavaSoft\Prefs at root 0x80000002. Windows RegCreateKeyEx(...) returned error code 5.
	if UNDO fails once, do not try and do undo any more
	recycle cards works more like it would in real life
	continue added to SwingGUI and FlashGUI and Android
	DONE - in the MapStore the "top downloaded" "Top New" text is not visable in mdpi
	download icon in MapStore changed to blue
	game can be played on Android

1.1.0.8 (02.04.2012)

	Fixed crash in AIHardCapital.java for map CRO.map and capital italianlike game
	copyright date fixed in About box
	memory usage smaller for PicturePanel, Castle in the Sky.map OutOfMemoryError
	can click to toggle animation at the end of the game
	mission to destroy a player show the players color as well as the name